--- a/energy_template.html
+++ b/energy_template.html
@@ -109,7 +109,7 @@
     <!-- Header -->
     <div class="header">
       <img src="https://uranus-tech.com/static/media/logo.d204e68cded9a46396b0.png" alt="Organization Logo" />
-      <h1>Welcome to the Energy Transition Summit 2025</h1>
+      <h1>Energy Transition Summit 2025, Kathmandu Nepal</h1>
     </div>
 
     <!-- Body -->
