--- a/energy_template.html
+++ b/energy_template.html
@@ -108,8 +108,8 @@
   <div class="container">
     <!-- Header -->
     <div class="header">
-      <img src="https://uranus-tech.com/static/media/logo.d204e68cded9a46396b0.png" alt="Organization Logo" />
-      <h1>Energy Transition Summit 2025, Kathmandu Nepal</h1>
+      <!-- <img src="https://uranus-tech.com/static/media/logo.d204e68cded9a46396b0.png" alt="Organization Logo" /> -->
+      <h1>Welcome to the Energy Transition for Resilient and Low Carbon Economy Summit 2025 Kathmandu, Nepal</h1>
     </div>
 
     <!-- Body -->
@@ -131,6 +131,11 @@
         If you have any questions or need assistance, feel free to reach out
         to our support team.
       </p>
+      <p>
+       <strong>
+        This is an automated message. Please Do not reply to this Mail! Thank you and Best of Luck
+       </strong>
+      </p>
     </div>
 
     <!-- Footer -->
@@ -141,7 +146,7 @@
       </p>
       <p class="footerText">
         Best regards,<br />
-        <strong>Energy Transition Team</strong>
+        <strong>Event Team</strong>
       </p>
     </div>
   </div>
