--- a/energy_template.html
+++ b/energy_template.html
@@ -1,155 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Registration Successful - Energy Transition Summit 2025</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <style>
+      body {
+        font-family: "Poppins", Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        border: #004a25;
+      }
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>
-    Registration Successful - Energy Transition Summit 2025
-  </title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-  <style>
-    body {
-      font-family: "Poppins", Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      border: #004a25;
-    }
+      .container {
+        max-width: 600px;
+        margin: 50px auto;
+        padding: 30px;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        border-radius: 15px;
+      }
 
-    .container {
-      max-width: 600px;
-      margin: 50px auto;
-      padding: 30px;
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-      border-radius: 15px;
-    }
+      .header {
+        text-align: center;
+        padding-bottom: 20px;
+        border-bottom: 2px solid #f0f0f0;
+      }
 
-    .header {
-      text-align: center;
-      padding-bottom: 20px;
-      border-bottom: 2px solid #f0f0f0;
-    }
+      .header img {
+        width: 100px;
+        height: auto;
+        margin-bottom: 15px;
+      }
 
-    .header img {
-      width: 100px;
-      height: auto;
-      margin-bottom: 15px;
-    }
+      .header h1 {
+        font-size: 24px;
+        color: #0a653c;
+        margin: 0;
+        font-weight: 600;
+      }
 
-    .header h1 {
-      font-size: 24px;
-      color: #0a653c;
-      margin: 0;
-      font-weight: 600;
-    }
+      .body {
+        padding: 20px;
+        text-align: center;
+      }
 
-    .body {
-      padding: 20px;
-      text-align: center;
-    }
+      .body h2 {
+        font-size: 20px;
+        color: #004a25;
+        font-weight: 600;
+        margin-bottom: 10px;
+      }
 
-    .body h2 {
-      font-size: 20px;
-      color: #004a25;
-      font-weight: 600;
-      margin-bottom: 10px;
-    }
+      .body p {
+        font-size: 16px;
+        line-height: 1.8;
+        color: #555;
+        margin-bottom: 15px;
+      }
 
-    .body p {
-      font-size: 16px;
-      line-height: 1.8;
-      color: #555;
-      margin-bottom: 15px;
-    }
+      .qr-code {
+        margin: 20px 0;
+      }
 
-    .qr-code {
-      margin: 20px 0;
-    }
+      .qr-code img {
+        width: 180px;
+        height: 180px;
+        border: 2px solid #004a25;
+        border-radius: 10px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+      }
 
-    .qr-code img {
-      width: 180px;
-      height: 180px;
-      border: 2px solid #004a25;
-      border-radius: 10px;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    }
+      .footer {
+        background: #0a653c;
+        color: #fff;
+        padding: 20px;
+        border-radius: 0 0 15px 15px;
+        text-align: center;
+      }
 
-    .footer {
-      background: #0a653c;
-      color: #fff;
-      padding: 20px;
-      border-radius: 0 0 15px 15px;
-      text-align: center;
-    }
+      .footer p {
+        margin: 0;
+        font-size: 14px;
+        line-height: 1.8;
+      }
 
-    .footer p {
-      margin: 0;
-      font-size: 14px;
-      line-height: 1.8;
-    }
+      .footer a {
+        color: #ffe600;
+        text-decoration: none;
+        font-weight: 600;
+      }
 
-    .footer a {
-      color: #ffe600;
-      text-decoration: none;
-      font-weight: 600;
-    }
+      .footer a:hover {
+        text-decoration: underline;
+      }
 
-    .footer a:hover {
-      text-decoration: underline;
-    }
+      .footerText {
+        color: #fff;
+      }
+    </style>
+  </head>
 
-    .footerText {
-      color: #fff;
-    }
-  </style>
-</head>
+  <body>
+    <div class="container">
+      <!-- Header -->
+      <div class="header">
+        <!-- <img src="https://uranus-tech.com/static/media/logo.d204e68cded9a46396b0.png" alt="Organization Logo" /> -->
+        <h1>
+          Welcome to the Energy Transition for Resilient and Low Carbon Economy
+          Summit 2025 Kathmandu, Nepal
+        </h1>
+      </div>
 
-<body>
-  <div class="container">
-    <!-- Header -->
-    <div class="header">
-      <!-- <img src="https://uranus-tech.com/static/media/logo.d204e68cded9a46396b0.png" alt="Organization Logo" /> -->
-      <h1>Welcome to the Energy Transition for Resilient and Low Carbon Economy Summit 2025 Kathmandu, Nepal</h1>
-    </div>
-
-    <!-- Body -->
-    <div class="body">
-      <h2>Hello, {{title}} {{firstName}} {{lastName}}!</h2>
-      <p>
-        Thank you for registering for the <strong>Energy Transition for
-          Resilient and Low Carbon Economy Summit 2025</strong>. We are thrilled
-        to have you join this transformative journey!
-      </p>
-      <div class="qr-code">
-        <p>Your Unique QR Code:</p>
-        <img src="https://api.qrserver.com/v1/create-qr-code/?data={{userUniqueID}}&size=150x150" alt="QR Code" />
+      <!-- Body -->
+      <div class="body">
+        <h2>Hello, {{title}} {{firstName}} {{lastName}}!</h2>
         <p>
-          <strong>{{fullName}}</strong>
+          Thank you for registering for the
+          <strong
+            >Energy Transition for Resilient and Low Carbon Economy Summit
+            2025</strong
+          >. We are thrilled to have you join this transformative journey!
+        </p>
+        <div class="qr-code">
+          <p>Your Unique QR Code:</p>
+          <img
+            src="https://api.qrserver.com/v1/create-qr-code/?data={{userUniqueID}}&size=150x150"
+            alt="QR Code"
+          />
+          <p>
+            <strong>{{fullName}}</strong>
+          </p>
+        </div>
+        <p>
+          If you have any questions or need assistance, feel free to reach out
+          to our support team.
+        </p>
+        <p>
+          <strong>
+            This is an automated message. Please do not reply to this email.
+            Thank you, and best of luck!
+          </strong>
         </p>
       </div>
-      <p>
-        If you have any questions or need assistance, feel free to reach out
-        to our support team.
-      </p>
-      <p>
-       <strong>
-        This is an automated message. Please Do not reply to this Mail! Thank you and Best of Luck
-       </strong>
-      </p>
-    </div>
 
-    <!-- Footer -->
-    <div class="footer">
-      <p class="footerText">
-        Thank you for choosing to be part of the Energy Transition Summit
-        2025. We look forward to seeing you at the event!
-      </p>
-      <p class="footerText">
-        Best regards,<br />
-        <strong>Event Team</strong>
-      </p>
+      <!-- Footer -->
+      <div class="footer">
+        <p class="footerText">
+          Thank you for joining the Energy Transition Summit 2025. We look
+          forward to welcoming you to the event!
+        </p>
+        <p class="footerText">
+          Best regards,<br />
+          <strong>Event Team</strong>
+        </p>
+      </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
