--- a/energy_template.html
+++ b/energy_template.html
@@ -3,41 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registration Successful - Energy Transition Summit 2025</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+    <title>Application Received - Energy Transition Summit 2025</title>
     <style>
       body {
         font-family: "Poppins", Arial, sans-serif;
         margin: 0;
         padding: 0;
-        border: #004a25;
+        background-color: #f9f9f9;
+        color: #333;
       }
 
       .container {
         max-width: 600px;
         margin: 50px auto;
         padding: 30px;
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-        border-radius: 15px;
+        background: #fff;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
       }
 
       .header {
         text-align: center;
         padding-bottom: 20px;
-        border-bottom: 2px solid #f0f0f0;
-      }
-
-      .header img {
-        width: 100px;
-        height: auto;
-        margin-bottom: 15px;
+        border-bottom: 1px solid #eaeaea;
       }
 
       .header h1 {
-        font-size: 24px;
+        font-size: 22px;
         color: #0a653c;
         margin: 0;
         font-weight: 600;
@@ -49,7 +41,7 @@
       }
 
       .body h2 {
-        font-size: 20px;
+        font-size: 18px;
         color: #004a25;
         font-weight: 600;
         margin-bottom: 10px;
@@ -57,35 +49,22 @@
 
       .body p {
         font-size: 16px;
-        line-height: 1.8;
+        line-height: 1.6;
         color: #555;
         margin-bottom: 15px;
-      }
-
-      .qr-code {
-        margin: 20px 0;
-      }
-
-      .qr-code img {
-        width: 180px;
-        height: 180px;
-        border: 2px solid #004a25;
-        border-radius: 10px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
       }
 
       .footer {
         background: #0a653c;
         color: #fff;
-        padding: 20px;
-        border-radius: 0 0 15px 15px;
+        padding: 15px;
+        border-radius: 0 0 10px 10px;
         text-align: center;
       }
 
       .footer p {
         margin: 0;
         font-size: 14px;
-        line-height: 1.8;
       }
 
       .footer a {
@@ -97,63 +76,59 @@
       .footer a:hover {
         text-decoration: underline;
       }
-
-      .footerText {
-        color: #fff;
+      .fooText{
+        color: #eaeaea;
       }
     </style>
   </head>
-
   <body>
     <div class="container">
       <!-- Header -->
       <div class="header">
-        <!-- <img src="https://uranus-tech.com/static/media/logo.d204e68cded9a46396b0.png" alt="Organization Logo" /> -->
         <h1>
-          Welcome to the Energy Transition for Resilient and Low Carbon Economy
-          Summit 2025 Kathmandu, Nepal
+          Energy Transition for Resilient and Low Carbon Economy Summit 2025
         </h1>
       </div>
 
       <!-- Body -->
       <div class="body">
-        <h2>Hello, {{title}} {{firstName}} {{lastName}}!</h2>
+        <h2>Thank You, {{title}} {{firstName}} {{lastName}}!</h2>
         <p>
-          Thank you for registering for the
+          We have received your application for the
           <strong
             >Energy Transition for Resilient and Low Carbon Economy Summit
             2025</strong
-          >. We are thrilled to have you join this transformative journey!
-        </p>
-        <div class="qr-code">
-          <p>Your Unique QR Code:</p>
-          <img
-            src="https://api.qrserver.com/v1/create-qr-code/?data={{userUniqueID}}&size=150x150"
-            alt="QR Code"
-          />
-          <p>
-            <strong>{{fullName}}</strong>
-          </p>
-        </div>
-        <p>
-          If you have any questions or need assistance, feel free to reach out
-          to our support team.
+          >.
         </p>
         <p>
-          <strong>
-            This is an automated message. Please do not reply to this email.
-            Thank you, and best of luck!
-          </strong>
+          Our team is currently reviewing your submission. We will send you a
+          confirmation email once your application has been processed and
+          approved.
+        </p>
+        <p>
+          If you have any questions in the meantime, feel free to reach out to
+          our support team:
+        </p>
+        <p>
+          <strong>Email:</strong>
+          <a href="info@aepc.gov.np">info@aepc.gov.np</a><br />
+          <strong>Phone:</strong> +9771-4598013
+        </p>
+        <p>
+          <strong
+            >This is an automated message. Please do not reply to this
+            email.</strong
+          >
         </p>
       </div>
 
       <!-- Footer -->
       <div class="footer">
-        <p class="footerText">
-          Thank you for joining the Energy Transition Summit 2025. We look
-          forward to welcoming you to the event!
+        <p class="fooText">
+          Thank you for your interest in the Energy Transition Summit 2025. We
+          look forward to connecting with you soon!
         </p>
-        <p class="footerText">
+        <p>
           Best regards,<br />
           <strong>Event Team</strong>
         </p>
