--- a/mailtemplate.html
+++ b/mailtemplate.html
@@ -1,178 +1,161 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>
-      Registration Approved - International Youth Camp 2025
-    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Registration Successful - Energy Transition Summit 2025</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <style>
       body {
-        font-family: Arial, sans-serif;
+        font-family: "Poppins", Arial, sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #f4f4f4;
+        border: #004a25;
       }
 
       .container {
-        width: 100%;
         max-width: 600px;
-        margin: 0 auto;
-        background-color: #ffffff;
-        padding: 20px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        border-radius: 8px;
-        position: relative;
+        margin: 50px auto;
+        padding: 30px;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        border-radius: 15px;
       }
 
       .header {
-        color: #0a653c;
-        padding: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: start;
+        text-align: center;
+        padding-bottom: 20px;
+        border-bottom: 2px solid #f0f0f0;
       }
 
       .header img {
-        width: 60px;
+        width: 100px;
         height: auto;
-        border-radius: 5px;
-        background-color: white;
-        margin-right: 20px;
+        margin-bottom: 15px;
       }
 
       .header h1 {
+        font-size: 24px;
+        color: #0a653c;
         margin: 0;
-        font-size: 20px;
-        text-decoration: underline 2px;
-        font-style: italic;
+        font-weight: 600;
       }
 
       .body {
         padding: 20px;
+        text-align: center;
+      }
+
+      .body h2 {
+        font-size: 20px;
+        color: #004a25;
+        font-weight: 600;
+        margin-bottom: 10px;
       }
 
       .body p {
-        line-height: 1.6;
+        font-size: 16px;
+        line-height: 1.8;
+        color: #555;
+        margin-bottom: 15px;
+      }
+
+      .qr-code {
+        margin: 20px 0;
+      }
+
+      .qr-code img {
+        width: 180px;
+        height: 180px;
+        border: 2px solid #004a25;
+        border-radius: 10px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
       }
 
       .footer {
-        background-color: #0a653c;
-        color: #ffffff;
+        background: #0a653c;
+        color: #fff;
         padding: 20px;
+        border-radius: 0 0 15px 15px;
         text-align: center;
+      }
+
+      .footer p {
+        margin: 0;
         font-size: 14px;
-        border-radius: 0 0 8px 8px;
+        line-height: 1.8;
       }
 
       .footer a {
-        color: #ffffff;
+        color: #ffe600;
         text-decoration: none;
+        font-weight: 600;
       }
 
-      .footer i {
-        margin-right: 5px;
-        color: #ffffff;
+      .footer a:hover {
+        text-decoration: underline;
       }
 
-      .button {
-        background-color: #0073b1;
-        color: #ffffff;
-        padding: 10px 20px;
-        text-decoration: none;
-        border-radius: 5px;
-        display: inline-block;
-        margin-top: 20px;
-      }
-
-      .body a {
-        color: #0073b1;
-        text-decoration: none;
-      }
-
-      .logos {
-        text-align: start;
-        margin-top: 20px;
-      }
-
-      .logos img {
-        width: 200px;
-        height: auto;
-        margin: 0 10px;
-      }
-
-      .disclaimer {
-        font-size: 12px;
-        color: #888888;
-        text-align: center;
-        margin-top: 20px;
+      .footerText {
+        color: #fff;
       }
     </style>
   </head>
 
   <body>
     <div class="container">
+      <!-- Header -->
       <div class="header">
-        <img
-          src="https://crownthevision.vercel.app/static/media/leologo.36a97d73caba58c79aad.png"
-          alt="Conference Logo"
-        />
-        <h1>"Crown The Vision: International Youth Camp 2025"</h1>
+        <!-- <img src="https://uranus-tech.com/static/media/logo.d204e68cded9a46396b0.png" alt="Organization Logo" /> -->
+        <h1>
+          Welcome to the Energy Transition for Resilient and Low Carbon Economy
+          Summit 2025 Kathmandu, Nepal
+        </h1>
       </div>
+
+      <!-- Body -->
       <div class="body">
-        <p>Dear {{firstName}} 👋,</p>
-        <p>Thank you for your application. Your form has been approved 🎉.</p>
+        <h2>Hello, {{title}} {{firstName}} {{lastName}}!</h2>
         <p>
-          Your username for member login is: <strong>{{firstName}}</strong>.
+          Thank you for registering for the
+          <strong
+            >Energy Transition for Resilient and Low Carbon Economy Summit
+            2025</strong
+          >. We are thrilled to have you join this transformative journey!
+        </p>
+        <div class="qr-code">
+          <p>Your Unique QR Code:</p>
+          <img
+            src="https://api.qrserver.com/v1/create-qr-code/?data={{userUniqueID}}&size=150x150"
+            alt="QR Code"
+          />
+          <p>
+            <strong>{{fullName}}</strong>
+          </p>
+        </div>
+        <p>
+          If you have any questions or need assistance, feel free to reach out
+          to our support team.
         </p>
         <p>
-          Your password for member login is: <strong>{{password}}</strong> 🔒.
-          Please keep this password safe. Thank you!
+          <strong>
+            This is an automated message. Please do not reply to this email.
+            Thank you, and best of luck!
+          </strong>
         </p>
-        <p>
-          Congratulation on successfully completing the first phase of the selection process! Out of hundreds of applicants, your application has truly stood out.
-          This camp is designed to empower young leaders like you, fostering collaboration, learning, and the ability to make a meaningful impact in your community.
-        </p>
-        <br>
-        <p>
-         For the second phase, you are required to pay a nominale fee of Rs.10,000/- within 72 hours of receiving this email, The voucher of the payment must be sent to 
-         <a href="mailto:crownthevision@gmail.com">crownthevision@gmail.com</a>
-         with your name and payment in the subject. (Example: Payment Voucher for John)
-        </p>
-        <h3>Payment Details</h3>
-        <p>
-           Name: Sourya Poudel<br />
-          Bank: Nepal Investment Mega Bank<br />
-          Account Number: 23705080004053<br />
-        </p>
-        <p>
-          Please go to the member login page to access your personal details.
-        </p>
-        <p>
-          Please feel free to reach out 
-          <a href="mailto:crownthevision@gmail.com">crownthevision@gmail.com</a>
-          if you have any questions or require assistance as we prepare for this exciting journey. We look 
-          forward to seeing you at the camp and witnessing the incredible energy and ideas you bring.
-        </p>
-
-      <div class="disclaimer">
-        <p>This is an automated message. Please do not reply to this email.</p>
       </div>
 
+      <!-- Footer -->
       <div class="footer">
-        <p>
-          <i class="fas fa-envelope"></i> E:
-          <a href="mailto:crownthevision@gmail.com"
-            >crownthevision@gmail.com</a
-          >
-          & <a href="mailto:crownthevision@mail.com">crownthevision@mail.com</a
-          ><br />
-          <i class="fas fa-globe"></i> W:
-          <a href="https://crownthevision.vercel.app/">https://crownthevision.vercel.app/</a> &
-          <i class="fas fa-phone"></i> P: +977 26789087987
+        <p class="footerText">
+          Thank you for joining the Energy Transition Summit 2025. We look
+          forward to welcoming you to the event!
+        </p>
+        <p class="footerText">
+          Best regards,<br />
+          <strong>Event Team</strong>
         </p>
       </div>
     </div>
