--- a/mailtemplate.html
+++ b/mailtemplate.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registration Successful - Energy Transition Summit 2025</title>
+    <title>Registration Confirmation - Energy Transition Summit 2025</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -13,14 +13,16 @@
         font-family: "Poppins", Arial, sans-serif;
         margin: 0;
         padding: 0;
-        border: #004a25;
+        background-color: #f4f8fa;
+        color: #333;
       }
 
       .container {
         max-width: 600px;
         margin: 50px auto;
         padding: 30px;
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        background: #fff;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
         border-radius: 15px;
       }
 
@@ -30,17 +32,11 @@
         border-bottom: 2px solid #f0f0f0;
       }
 
-      .header img {
-        width: 100px;
-        height: auto;
-        margin-bottom: 15px;
-      }
-
       .header h1 {
         font-size: 24px;
         color: #0a653c;
         margin: 0;
-        font-weight: 600;
+        font-weight: 700;
       }
 
       .body {
@@ -49,17 +45,17 @@
       }
 
       .body h2 {
-        font-size: 20px;
+        font-size: 22px;
         color: #004a25;
-        font-weight: 600;
-        margin-bottom: 10px;
+        font-weight: 700;
+        margin-bottom: 15px;
       }
 
       .body p {
         font-size: 16px;
         line-height: 1.8;
         color: #555;
-        margin-bottom: 15px;
+        margin-bottom: 20px;
       }
 
       .qr-code {
@@ -83,7 +79,7 @@
       }
 
       .footer p {
-        margin: 0;
+        margin: 0 0 10px;
         font-size: 14px;
         line-height: 1.8;
       }
@@ -108,54 +104,69 @@
     <div class="container">
       <!-- Header -->
       <div class="header">
-        <!-- <img src="https://uranus-tech.com/static/media/logo.d204e68cded9a46396b0.png" alt="Organization Logo" /> -->
-        <h1>
-          Welcome to the Energy Transition for Resilient and Low Carbon Economy
-          Summit 2025 Kathmandu, Nepal
-        </h1>
+        <h1>Congratulations and Welcome!</h1>
+        <p>
+          We are thrilled to inform you that your application has been accepted.
+        </p>
       </div>
 
       <!-- Body -->
       <div class="body">
-        <h2>Hello, {{title}} {{firstName}} {{lastName}}!</h2>
+        <h2>Hello, {{firstName}} {{lastName}}!</h2>
         <p>
-          Thank you for registering for the
+          It’s our pleasure to let you know that your registration for the
           <strong
             >Energy Transition for Resilient and Low Carbon Economy Summit
             2025</strong
-          >. We are thrilled to have you join this transformative journey!
+          >
+          has been successfully accepted. We are excited to have you join us on
+          this transformative journey.
         </p>
         <div class="qr-code">
-          <p>Your Unique QR Code:</p>
+          <p>
+            <strong>Here is your unique QR code:</strong>
+          </p>
           <img
             src="https://api.qrserver.com/v1/create-qr-code/?data={{userUniqueID}}&size=150x150"
             alt="QR Code"
           />
-          <p>
-            <strong>{{fullName}}</strong>
-          </p>
+          <p><strong>{{firstName}} {{lastName}}</strong></p>
         </div>
         <p>
-          If you have any questions or need assistance, feel free to reach out
-          to our support team.
+          Please present this QR code at the registration desk upon your arrival
+          at the venue. It will serve as your entry pass for the event.
         </p>
         <p>
-          <strong>
-            This is an automated message. Please do not reply to this email.
-            Thank you, and best of luck!
-          </strong>
+          <strong>Event Details:</strong><br />
+          Venue: <strong>Soaltee Hotel Kathmandu</strong><br />
+          Date: <strong>January 18, 2025</strong><br />
+          Time: <strong>8:30 AM onwards</strong>
+        </p>
+        <p>
+          If you have any questions or require assistance, feel free to contact
+          our support team:
+        </p>
+        <p>
+          <strong>Email:</strong>
+          <a href="mailto:info@aepc.gov.np">info@aepc.gov.np</a><br />
+          <strong>Phone:</strong> +9771-4598013
+        </p>
+        <p>
+          We can’t wait to meet you at the summit and ensure you have an
+          incredible experience!
         </p>
       </div>
 
       <!-- Footer -->
       <div class="footer">
         <p class="footerText">
-          Thank you for joining the Energy Transition Summit 2025. We look
-          forward to welcoming you to the event!
+          Thank you for being part of the Energy Transition Summit 2025.
+          Together, we will shape a resilient and sustainable future.
         </p>
         <p class="footerText">
           Best regards,<br />
-          <strong>Event Team</strong>
+          <strong>Alternative Energy Promotion Centre</strong><br />
+          <span>Kathmandu, Nepal</span>
         </p>
       </div>
     </div>
