Volunteer Temp Added

--- a/volunteertemplate.html
+++ b/volunteertemplate.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>
-      Volunteer Registration Approved - International Youth Camp 2025
+      Volunteer Registration Approved - Energy Transition Summit 2025
     </title>
     <link
       rel="stylesheet"
@@ -93,17 +93,6 @@
         text-decoration: none;
       }
 
-      .logos {
-        text-align: start;
-        margin-top: 20px;
-      }
-
-      .logos img {
-        width: 200px;
-        height: auto;
-        margin: 0 10px;
-      }
-
       .disclaimer {
         font-size: 12px;
         color: #888888;
@@ -117,46 +106,67 @@
     <div class="container">
       <div class="header">
         <img
-          src="https://crownthevision.vercel.app/static/media/leologo.36a97d73caba58c79aad.png"
-          alt="Conference Logo"
+          src="https://greenenergynepal.vercel.app/static/media/uranusevents.e825fd1cbf382aa272d6.png"
+          alt="Summit Logo"
         />
-        <h1>"Crown The Vision: International Youth Camp 2025"</h1>
+        <h1>
+          "Energy Transition for Resilient and Low Carbon Economy Summit 2025"
+        </h1>
       </div>
       <div class="body">
         <p>Dear {{email}} 👋,</p>
-        <p>Thank you for your application. Your form has been approved 🎉.</p>
         <p>
-          Your mail for Volunteer login is: <strong>{{email}}</strong>.
+          Welcome to the Energy Transition for Resilient and Low Carbon Economy
+          Summit 2025 🎉.
         </p>
+        <p>Your email for app login is: <strong>{{email}}</strong>.</p>
         <p>
-          Your password for member login is: <strong>{{password}}</strong> 🔒.
+          Your password for app login is: <strong>{{password}}</strong> 🔒.
           Please keep this password safe. Thank you!
         </p>
         <p>
-          Please go to the Volunter login page to access your personal details.
+          Download the Energy Transition Summit mobile app to access your
+          personal details and stay updated:
+        </p>
+        <ul>
+          <li>
+            <strong>iOS App:</strong>
+            <a href="https://apps.apple.com/us/app/ura-events/id6740744398"
+              >Download from the App Store</a
+            >
+          </li>
+          <li>
+            <strong>Android App:</strong>
+            <a
+              href="https://drive.google.com/drive/folders/1byLSrt8xx0sL-HbA4QVzDXE5VCkZ396D?usp=sharing"
+              >Download from Drive</a
+            >
+          </li>
+        </ul>
+        <p>
+          If you have any questions or require assistance, feel free to contact
+          our support team:
         </p>
         <p>
-          Please feel free to reach out 
-          <a href="mailto:crownthevision@gmail.com">crownthevision@gmail.com</a>
-          if you have any questions or require assistance as we prepare for this exciting journey. We look 
-          forward to seeing you at the camp and witnessing the incredible energy and ideas you bring.
+          <strong>Email:</strong>
+          <a href="mailto:info@aepc.gov.np">info@aepc.gov.np</a><br />
+          <strong>Phone:</strong> +9771-4598013
         </p>
 
-      <div class="disclaimer">
-        <p>This is an automated message. Please do not reply to this email.</p>
+        <div class="disclaimer">
+          <p>
+            This is an automated message. Please do not reply to this email.
+          </p>
+        </div>
       </div>
-
       <div class="footer">
         <p>
-          <i class="fas fa-envelope"></i> E:
-          <a href="mailto:crownthevision@gmail.com"
-            >crownthevision@gmail.com</a
-          >
-          & <a href="mailto:crownthevision@mail.com">crownthevision@mail.com</a
-          ><br />
-          <i class="fas fa-globe"></i> W:
-          <a href="https://crownthevision.vercel.app/">https://crownthevision.vercel.app/</a> &
-          <i class="fas fa-phone"></i> P: +977 26789087987
+          Thank you for your interest in the Energy Transition Summit 2025. We
+          look forward to connecting with you soon!
+        </p>
+        <p>
+          Best regards,<br />
+          <strong>Alternative Energy Promotion Centre</strong>
         </p>
       </div>
     </div>
