--- a/volunteertemplate.html
+++ b/volunteertemplate.html
@@ -114,19 +114,21 @@
         </h1>
       </div>
       <div class="body">
-        <p>Dear {{email}} 👋,</p>
+        <p>Dear Volunteer {{email}} 👋,</p>
         <p>
-          Welcome to the Energy Transition for Resilient and Low Carbon Economy
-          Summit 2025 🎉.
+          Thank you for registering as a volunteer for the Energy Transition for
+          Resilient and Low Carbon Economy Summit 2025 🎉.
         </p>
-        <p>Your email for app login is: <strong>{{email}}</strong>.</p>
+        <p>
+          Your volunteer email for app login is: <strong>{{email}}</strong>.
+        </p>
         <p>
           Your password for app login is: <strong>{{password}}</strong> 🔒.
           Please keep this password safe. Thank you!
         </p>
         <p>
-          Download the Energy Transition Summit mobile app to access your
-          personal details and stay updated:
+          Download the Energy Transition Summit mobile app to manage your
+          volunteer tasks and stay updated:
         </p>
         <ul>
           <li>
@@ -139,13 +141,13 @@
             <strong>Android App:</strong>
             <a
               href="https://drive.google.com/drive/folders/1byLSrt8xx0sL-HbA4QVzDXE5VCkZ396D?usp=sharing"
-              >Download from Drive</a
+              >Download from Google Drive</a
             >
           </li>
         </ul>
         <p>
-          If you have any questions or require assistance, feel free to contact
-          our support team:
+          If you have any questions or require assistance as a volunteer, feel
+          free to contact our support team:
         </p>
         <p>
           <strong>Email:</strong>
@@ -161,8 +163,8 @@
       </div>
       <div class="footer">
         <p>
-          Thank you for your interest in the Energy Transition Summit 2025. We
-          look forward to connecting with you soon!
+          Thank you for your valuable contribution as a volunteer for the Energy
+          Transition Summit 2025. We look forward to collaborating with you!
         </p>
         <p>
           Best regards,<br />
